# ZeroTrace

./: .clang-format  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DEVELOPMENT_CHECKLIST.md  LICENSE  Makefile  NEW_PROJECT_STRUCTURE.md  README.md  pyproject.toml  roadmap.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  security.yml
docs/: DEVELOPMENT.md  README.md  epp-requirements.md  implementation-roadmap.md
docs/meta/build-configs/: Makefile.backup  Makefile.new
docs/meta/diagrams/: projectstructure.mmd
docs/meta/documentation/: PROJECT_STRUCTURE.md  QUICK_START.md
docs/project-organization/: PROJE_YAPISI.md  REORGANIZASYON_OZETI.md  ULTRA_MODULAR_REPORT.md
scripts/: local-test.sh
services/collectors/process-collector/: CMakeLists.txt  README.md
src/analyzers/hash-checker/: README.md
src/analyzers/yara-scanner/: README.md
src/api/: main.py
src/collectors/process-collector/: CMakeLists.txt  README.md
src/collectors/process-collector/include/: ProcessCollector.h
src/collectors/process-collector/src/: ProcessCollector.cpp
src/shared/data-schemas/: event-schema.json  zerotrace_event.py
src/shared/utils/: base_service.py  service_discovery.py
tests/: conftest.py  test_basic.py
tools/build-scripts/: build.sh  check_env.sh  security-check.sh  setup.sh
tools/development/environment/: .env.example  .env.production
tools/development/scripts/: dev-manager.sh  validate-environment.sh
tools/qa/code-quality/: .pre-commit-config.yaml
